--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
   },
   "dependencies": {
     "framer-motion": "^11.17.0",
+    "i18next": "^24.2.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-i18next": "^15.4.0",
     "react-icons": "^5.4.0",
     "react-modal": "^3.16.3",
     "react-scroll": "^1.9.0",
